wizard fini, warrioir commence

--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -45,23 +45,35 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:autofillHints="@string/nameEditText"
+        android:autofillHints="@string/namePlaceholderText"
         android:ems="10"
         android:inputType="textPersonName"
         android:labelFor="@id/nameEditText"
         android:minHeight="48dp"
-        android:text="@string/nameEditText"
+        android:text="@string/namePlaceholderText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nameTextView"
         app:layout_constraintTop_toBottomOf="@+id/characterTextView" />
 
     <CalendarView
-        android:id="@+id/calendarView"
+        android:id="@+id/ageCalendarView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/birthdateTextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/birthdateTextView" />
+
+    <Button
+        android:id="@+id/validateAgeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="validateCharacter"
+        android:text="@string/validateCharacterText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ageCalendarView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
