--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/easyTextView"
+        android:text="@string/easyDifficulty"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/difficultySeekBar"
         app:layout_constraintTop_toBottomOf="@+id/difficultySeekBar" />
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/normalTextView"
+        android:text="@string/normalDifficulty"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/difficultTextView"
+        android:text="@string/hardDifficulty"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/difficultySeekBar"
         app:layout_constraintTop_toBottomOf="@+id/difficultySeekBar" />
