--- a/app/src/main/res/layout/activity_warrior_challenge_1.xml
+++ b/app/src/main/res/layout/activity_warrior_challenge_1.xml
@@ -54,13 +54,13 @@
         app:layout_constraintTop_toBottomOf="@+id/videoView">
 
         <RadioButton
-            android:id="@+id/aAnswerRadioButton"
+            android:id="@+id/A"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/aAnswerRadioButton" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/B"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/bAnswerRadioButton" />
