--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -24,7 +24,9 @@
         android:id="@+id/gameDetailsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/gameDetailsTextView"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
